--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,8 @@ r.Nanite.Tessellation=1
 r.AntiAliasingMethod=2
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
 r.DBuffer=True
+r.RayTracing=True
+r.MegaLights.EnableForProject=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
