--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,11 +12,11 @@ GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_Thi
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=0
+r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=0
+r.DynamicGlobalIlluminationMethod=1
 r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=0
+r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -35,6 +35,7 @@ r.RayTracing=False
 r.MegaLights.EnableForProject=False
 r.PathTracing=False
 r.VirtualTextures=True
+r.SkinCache.SceneMemoryLimitInMB=256.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -194,4 +195,7 @@ DefaultSizeInMegabyte=64
 bPoolAutoGrowInEditor=True
 +Pools=(Formats=(PF_G16),MinTileSize=264,MaxTileSize=264,SizeInMegabyte=320,bEnableResidencyMipMapBias=False,bAllowSizeScale=False,MinScaledSizeInMegabyte=0,MaxScaledSizeInMegabyte=0)
 +Pools=(Formats=(PF_DXT5,PF_DXT5),MinTileSize=264,MaxTileSize=264,SizeInMegabyte=320,bEnableResidencyMipMapBias=False,bAllowSizeScale=False,MinScaledSizeInMegabyte=0,MaxScaledSizeInMegabyte=0)
+
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=True
 
